[package]
name = "nanopq-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
ndarray = "0.15"
ndarray-rand = "0.14"
nalgebra = "0.30"
linfa = "0.5"
linfa-clustering = "0.5"
anyhow = "1.0"
num = "0.4"
num-traits = "0.2"

[dev-dependencies]
approx = "0.5.0"
ndarray = {version = "0.15", features = ["approx-0_5"]}
rand_isaac = "0.3"